--- a/slick/slick.css
+++ b/slick/slick.css
@@ -36,7 +36,6 @@
 {
     cursor: pointer;
     cursor: hand;
-    padding: 0;
 }
 
 .slick-slider .slick-track,
@@ -81,7 +80,7 @@
     float: left;
 
     height: 100%;
-    /* min-height: 1px; */
+    min-height: 1px;
 }
 [dir='rtl'] .slick-slide
 {
