--- a/css/style.css
+++ b/css/style.css
@@ -8,6 +8,8 @@
 }
 
 .col-md-12 h1 {
+	padding: 70px 0 10px;
+
 	font-family: "Alegreya", "Arial", serif;
 	font-size: 60px;
 	line-height: 21px;
@@ -17,12 +19,19 @@
 }
 
 .col-md-12 small {
+	display: block;
+	padding: 10px 0 30px;
+
 	font-family: "Gentium Basic", "Arial", serif;
 	font-size: 14px;
 	line-height: 21px;
 	font-weight: 400;
 	letter-spacing: 0.025em;
 	color: #333333;
+}
+
+.nav {
+	padding: 30px 0 80px;
 }
 
 .col-md-12 .nav a {
@@ -78,6 +87,8 @@
 }
 
 .slide-text {
+	padding: 70px 0 70px;
+
 	font-family: "Gentium Book Basic", "Arial", serif;
 	font-size: 48px;
 	line-height: 30px;
@@ -88,6 +99,11 @@
 }
 
 .wiki {
+	padding: 10px 0;
+
+	border-top: 1px solid #cccccc;
+	border-bottom: 1px solid #cccccc;
+
 	font-family: "Gentium Book Basic", "Arial", serif;
 	font-size: 24px;
 	line-height: 24px;
