--- a/slick/slick-theme.css
+++ b/slick/slick-theme.css
@@ -202,3 +202,93 @@
     opacity: .75;
     color: black;
 }
+
+.my-dots
+{
+    position: absolute;
+    bottom: 30px;
+
+    display: block;
+
+    width: 100%;
+    padding: 0;
+    margin: 0;
+
+    list-style: none;
+
+    text-align: center;
+}
+.my-dots li
+{
+    position: relative;
+
+    display: inline-block;
+
+    width: 20px;
+    height: 20px;
+    margin: 0;
+    padding: 0;
+
+    cursor: pointer;
+}
+.my-dots li button
+{
+    font-size: 0;
+    line-height: 0;
+
+    display: block;
+
+    width: 12px;
+    height: 12px;
+    padding: 5px;
+
+    cursor: pointer;
+
+    color: transparent;
+    border: 1px solid #000000;
+    border-radius: 50%;
+    outline: none;
+    background: #ffffff;
+}
+.my-dots li button:hover,
+.my-dots li button:focus
+{
+    outline: none;
+    background-color: #cc3300;
+    border: none;
+}
+.my-dots li button:hover:before,
+.my-dots li button:focus:before
+{
+    opacity: 1;
+}
+.my-dots li button:before
+{
+    font-family: 'slick';
+    font-size: 6px;
+    line-height: 20px;
+
+    position: absolute;
+    top: 0;
+    left: 0;
+
+    width: 20px;
+    height: 20px;
+
+    content: '';
+    text-align: center;
+
+    opacity: 1;
+    color: #ffffff;
+
+    -webkit-font-smoothing: antialiased;
+    -moz-osx-font-smoothing: grayscale;
+}
+.my-dots li.slick-active button:before
+{
+    width: 12px;
+    height: 12px;
+    opacity: 1;
+    background-color: #cc3300;
+    border-radius: 50%;
+}
