--- a/css/style.css
+++ b/css/style.css
@@ -30,8 +30,29 @@
 	color: #333333;
 }
 
+.nav-block {
+	position: relative;
+}
+
+.nav-block::after {
+	content: "";
+	position: absolute;
+	top: 30%;
+	left: 0;
+
+	display: block;
+	width: 100%;
+	height: 1px;
+	background-color: #333333;
+}
+
 .nav {
-	padding: 30px 0 80px;
+	position: relative;
+	z-index: 1;
+
+	padding: 30px 15px 80px !important;
+
+	background-color: #ffffff;
 }
 
 .col-md-12 .nav a {
@@ -86,6 +107,24 @@
 	background-size: auto 100%;
 }
 
+.feature-more-link {
+	padding-bottom: 5px;
+
+	border-bottom: 1px dotted #cccccc;
+
+	font-family: "Nobile", "Arial", sans-serif;
+	font-size: 12px;
+	line-height: 22px;
+	font-weight: 400;
+	letter-spacing: 0.025em;
+	color: #444444;
+	text-decoration: none;
+}
+
+.feature-more-link:hover {
+	text-decoration: none;
+}
+
 .slide-text {
 	padding: 70px 0 70px;
 
@@ -100,6 +139,7 @@
 
 .wiki {
 	padding: 10px 0;
+	margin-bottom: 80px;
 
 	border-top: 1px solid #cccccc;
 	border-bottom: 1px solid #cccccc;
@@ -123,6 +163,12 @@
 	color: #333333;
 }
 
+.feature-title {
+	max-width: 250px;
+
+	margin-bottom: 30px;
+}
+
 .feature-desc,
 .item-desc {
 	font-family: "Nobile", "Arial", sans-serif;
@@ -133,7 +179,15 @@
 	color: #706f6f;
 }
 
+.item-title {
+	margin: 0;
+	margin-top: 20px;
+}
+
 .item-date {
+	display: block;
+	margin-bottom: 15px;
+
 	font-family: "Nobile", "Arial", sans-serif;
 	font-size: 11px;
 	line-height: 22px;
@@ -142,7 +196,50 @@
 	color: #aaaaaa;
 }
 
+.more-posts {
+	padding: 20px 0 80px;
+}
+
+.more-posts img {
+	cursor: pointer;
+}
+
+.socials {
+	margin-bottom: 25px;
+}
+
+.social-links {
+	position: relative;
+	z-index: 1;
+
+	display: inline-block;
+	padding: 0 25px;
+
+	background-color: #ffffff;
+}
+
+.socials a {
+	margin: 0 10px;
+}
+
+.social-items {
+	position: relative;
+}
+
+.social-items::after {
+	content: "";
+	position: absolute;
+	top: 50%;
+	left: 0;
+
+	display: block;
+	width: 100%;
+	height: 1px;
+	background-color: #333333;
+}
+
 .copyright {
+	margin-bottom: 40px;
 	font-family: "Nobile", "Arial", sans-serif;
 	font-size: 11px;
 	line-height: 22px;
